Revert "Fix spacing between stats overview and store management cards"
This reverts commit 993374313657f7ecf7803cc738b82bf63ecdf490.

--- a/client/homescreen/stats-overview/style.scss
+++ b/client/homescreen/stats-overview/style.scss
@@ -4,8 +4,6 @@ $promo-actions-border-top: $core-grey-light-500;
 $promo-actions-border-bottom: $light-gray-tertiary;
 
 .woocommerce-stats-overview {
-	margin-bottom: $gap-large;
-
 	.woocommerce-card__body {
 		padding: 0;
 	}
